--- a/src/App.css
+++ b/src/App.css
@@ -28,29 +28,45 @@ body {
 }
 
 .hero-img {
+    margin-top: 20px;
     max-width: 400px;
     align-self: center;
 }
 
 .hero > h1 {
+    margin-top: 35px;
     font-size: 36px;
     font-weight: bold;
 }
 
 .card {
     width: 176px;
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 auto;
+    position: relative;
+}
+
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+    padding: 20px;
 }
 
 .card-img > img {
     width: 100%;
+    max-height: 235px;
     border-radius: 9px;
+    margin-bottom: 9px;
 }
 
-.card-img > button {
+/* .card-img > button {
     padding: 3px;
     background-color: #FFFFFF;
     border: none;
-}
+} */
 
 .card-info {
     display: flex;
@@ -73,7 +89,7 @@ body {
 
 .star-num, .star-country {
     font-weight: 400;
-    color: #E5E5E5;
+    color: #918E9B;
 }
 
 .card > p {
@@ -88,4 +104,30 @@ body {
 
 .person {
     font-weight: 300;
+}
+
+.card-badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
+}
+
+
+
+
+
+/* Media query for PC */
+
+@media only screen and (min-width: 800px)  {
+    .cards-list {
+        justify-content: center;
+    }
+
+    .hero-img {
+        max-width: 700px;
+    }
 }
